--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -31,6 +31,11 @@
   padding: 0;
 }
 
+.user-anchor {
+  text-decoration: none;
+  color: black;
+}
+
 .result-li {
   margin-bottom: 10px;
   display: flex;
