--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -14,6 +14,11 @@
   .page-header {
     font-size: 24px;
   }
+
+  .search-icon,
+  .chats-link {
+    display: none;
+  }
 }
 
 @media (orientation: portrait) {
@@ -23,5 +28,10 @@
 
   .page-header {
     font-size: 20px;
+  }
+
+  .search-link,
+  .chats-link {
+    display: none;
   }
 }
