Converted timestamps to show just hour and day in 12 hour format. #2

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -34,4 +34,17 @@
   .chats-link {
     display: none;
   }
+
+  .title {
+    position: fixed;
+  }
+
+  .button-send {
+    position: fixed;
+    right: 2em;
+  }
+
+  .text-input {
+    width: 70%;
+  }
 }
