--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -124,20 +124,15 @@
   flex-direction: row;
 } */
 
-.messages {
+.message {
   background-color: #0099fe;
   font-size: 20px;
   color: white;
-  width: 200px;
-  height: 80px;
   border-radius: 27px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-left: 15px;
-  margin-left: 150px;
   margin-bottom: 20px;
-  flex-direction: column;
+  max-width: 150px;
+  padding: 10px;
+  word-break: break-word;
 }
 
 .message-input {
