--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -133,6 +133,9 @@
   max-width: 150px;
   padding: 10px;
   word-break: break-word;
+  display: inline-block;
+  min-width: 40px;
+  margin-left: 30px;
 }
 
 .message-input {
