--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -119,23 +119,24 @@
   margin-top: 10px;
 }
 
-/* .message-display {
-  display: flex;
-  flex-direction: row;
-} */
+.message-display {
+  text-align: right;
+}
 
 .message {
   background-color: #0099fe;
   font-size: 20px;
   color: white;
   border-radius: 27px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   max-width: 150px;
-  padding: 10px;
+  padding: 12px;
   word-break: break-word;
   display: inline-block;
   min-width: 40px;
-  margin-left: 30px;
+  text-align: left;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 .message-input {
@@ -150,7 +151,6 @@
 }
 
 .timestamp {
-  padding-left: 270px;
   font-weight: lighter;
 }
 
